# NullEngine

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
contrib/: CMakeLists.txt
examples/: CMakeLists.txt
examples/quick_start_native/: CMakeLists.txt  quick_start_application.cpp  quick_start_application.hpp  quick_start_native.cpp
examples/rasterization/: CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  events.hpp  model.cpp  model.hpp  rasterization_example.cpp  view.cpp  view.hpp
include/null_engine/: null_engine.hpp
include/null_engine/drawable_objects/: drawable_objects.hpp
include/null_engine/drawable_objects/common/: vertices_object.hpp
include/null_engine/generic/: generic_scene.hpp
include/null_engine/generic/camera/: generic_camera.hpp  generic_camera_base.hpp  generic_direct_camera.hpp
include/null_engine/generic/mesh/: generic_mesh.hpp  generic_vertex.hpp
include/null_engine/generic/renderer/: generic_renderer.hpp  generic_rendering_consumer.hpp  generic_texture_consumer.hpp
include/null_engine/native/: native_renderer.hpp
include/null_engine/native/common/: native_vertex.hpp
include/null_engine/testlib/: testlib_base_application.hpp
src/null_engine/: CMakeLists.txt  null_engine.cpp  null_engine.hpp
src/null_engine/acceleration/: CMakeLists.txt  acceleration_context.cpp  acceleration_context.hpp  helpers.cpp  helpers.hpp
src/null_engine/drawable_objects/: CMakeLists.txt  drawable_objects.cpp  primitive_objects.cpp  primitive_objects.hpp  vertex.cpp  vertex.hpp  vertices_object.cpp  vertices_object.hpp
src/null_engine/drawable_objects/common/: CMakeLists.txt  vertex.cpp  vertex.hpp  vertices_object.cpp  vertices_object.hpp
src/null_engine/drawable_objects/material/: CMakeLists.txt  material.hpp  texture.cpp  texture.hpp
src/null_engine/generic/: CMakeLists.txt  generic_scene.cpp  generic_scene.hpp  generic_scene_renderer.cpp  generic_scene_renderer.hpp
src/null_engine/generic/camera/: CMakeLists.txt  generic_camera.cpp  generic_camera.hpp  generic_camera_base.cpp  generic_camera_base.hpp  generic_camera_control.cpp  generic_camera_control.hpp  generic_camera_interface.cpp  generic_camera_interface.hpp  generic_direct_camera.cpp  generic_direct_camera.hpp  generic_perspective_camera.cpp  generic_perspective_camera.hpp
src/null_engine/generic/mesh/: CMakeLists.txt  (+6 more)
src/null_engine/generic/renderer/: CMakeLists.txt  generic_consumer_interface.cpp  generic_consumer_interface.hpp  generic_renderer.cpp  generic_renderer.hpp  generic_renderer_interface.cpp  generic_renderer_interface.hpp  generic_rendering_consumer.cpp  generic_texture_consumer.cpp  generic_texture_consumer.hpp
src/null_engine/native/: CMakeLists.txt  native_renderer.cpp  native_renderer.hpp
src/null_engine/rasterization/: native_renderer.cpp
src/null_engine/renderer/: CMakeLists.txt  common.cpp  common.hpp  multithread_renderer.cpp  multithread_renderer.hpp  native_renderer.cpp  native_renderer.hpp  renderer.cpp  renderer.hpp
src/null_engine/renderer/camera/: CMakeLists.txt  camera.cpp  camera.hpp  camera_control.cpp  camera_control.hpp  camera_interface.hpp  generic_camera_control.hpp  generic_camera_interface.hpp
src/null_engine/renderer/clipping/: CMakeLists.txt  clipping.cpp  clipping.hpp
src/null_engine/renderer/consumers/: CMakeLists.txt  texture_rendering_consumer.cpp  texture_rendering_consumer.hpp
src/null_engine/renderer/rasterization/: CMakeLists.txt  common.cpp  common.hpp  interpolation.cpp  interpolation.hpp  multithread_rasterizer.cpp  multithread_rasterizer.hpp  native_rasterizer.cpp  native_rasterizer.hpp  native_rasterizer_context.cpp  native_rasterizer_context.hpp  rasterizer.cpp  rasterizer.hpp
src/null_engine/renderer/shaders/: CMakeLists.txt  fragment_shader.cpp  fragment_shader.hpp  vertex_shader.cpp  vertex_shader.hpp
src/null_engine/scene/: CMakeLists.txt  generic_scene.cpp  generic_scene.hpp  generic_scene_renderer.cpp  generic_scene_renderer.hpp  scene.cpp  scene.hpp
src/null_engine/scene/animations/: CMakeLists.txt  animation.cpp  animation.hpp  animator.cpp  animator.hpp  primitive_animations.cpp  primitive_animations.hpp
src/null_engine/scene/camera/: CMakeLists.txt  camera.cpp  generic_camera_base.cpp  generic_camera_base.hpp  generic_camera_control.cpp  generic_direct_camera.cpp  generic_direct_camera.hpp  generic_perspective_camera.cpp  generic_perspective_camera.hpp
src/null_engine/scene/lights/: CMakeLists.txt  light.cpp  light.hpp  light_interface.hpp  scene_light.cpp  scene_light.hpp
src/null_engine/scene/objects/: CMakeLists.txt  scene_object.cpp  scene_object.hpp
src/null_engine/scene/renderer/: CMakeLists.txt  generic_consumer_interface.hpp  generic_renderer_interface.hpp  generic_texture_consumer.cpp  generic_texture_consumer.hpp
src/null_engine/testlib/: CMakeLists.txt  testlib_base_application.cpp  testlib_base_application.hpp
src/null_engine/tests/: CMakeLists.txt  tests_constants.cpp  tests_constants.hpp  tests_exceptions.cpp  tests_exceptions.hpp  tests_helpers.cpp  tests_helpers.hpp
src/null_engine/util/: CMakeLists.txt
src/null_engine/util/interface/: CMakeLists.txt  constants.cpp  fonts.cpp  fps_counter.cpp  fps_display.cpp  fps_display.hpp  gui_interface.cpp  gui_interface.hpp  interface_holder.cpp  interface_holder.hpp  interface_object.cpp
src/null_engine/util/interface/controls/: CMakeLists.txt  centering_mouse_control.cpp  centering_mouse_control.hpp  keyboard_control.cpp  keyboard_control.hpp
src/null_engine/util/interface/helpers/: CMakeLists.txt  constants.cpp  constants.hpp  events.cpp  events.hpp  fonts.cpp  fonts.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/null_engine/util/interface/objects/: CMakeLists.txt  fps_counter.cpp  fps_counter.hpp  fps_display.cpp  fps_display.hpp  interface_object.cpp  interface_object.hpp  object_interface.cpp  object_interface.hpp  texture_rendering_consumer.cpp  texture_rendering_consumer.hpp
util/geometry/: CMakeLists.txt  constants.hpp  vector_3d.cpp  vector_3d.hpp
(+61 files in other folders)
